@@ -58,6 +58,7 @@
  * #1556 (WeibullMin::computePDFGradient yields the partial derivatives in the wrong order)
  * #1564 (Set a Point makes ot crash)
  * #1567 (The API doc of SobolIndicesExperiment has a format issue)
+ * #1573 (LinearModelAnalysis::drawQQPlot line is not the first bisector)
 
 
 == 1.15 release (2020-05-25) == #release-1.15
